k8s/altair/apps/kafka/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kafka.greedo.net`)
      kind: Rule
      middlewares:
        - name: infra-admin-oidc-auth
          namespace: kube-system
      services:
        - name: kafka-ui
          port: 80
  tls: {}
